@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright (c) 1997-2011 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997-2012 Oracle and/or its affiliates. All rights reserved.
  *
  * The contents of this file are subject to the terms of either the GNU
  * General Public License Version 2 only ("GPL") or the Common Development
@@ -44,6 +44,7 @@ import java.util.Vector;
 import java.util.Properties;
 import java.io.*;
 import java.net.*;
+import javax.net.ssl.SSLSocket;
 import com.sun.mail.util.*;
 
 /**
@@ -377,9 +378,13 @@ public class Protocol {
      * Start TLS on the current connection.
      * <code>cmd</code> is the command to issue to start TLS negotiation.
      * If the command succeeds, we begin TLS negotiation.
+     * If the socket is already an SSLSocket this is a nop and the command
+     * is not issued.
      */
     public synchronized void startTLS(String cmd)
 				throws IOException, ProtocolException {
+	if (socket instanceof SSLSocket)
+	    return;	// nothing to do
 	simpleCommand(cmd, null);
 	socket = SocketFetcher.startTLS(socket, host, props, prefix);
 	initStreams(out);
